SERVER-113706 numKeysEstimate is incorrect with missing/null values, $ne, descending index (#46098)

GitOrigin-RevId: f12861f5f3000b65e51fededa49895b716b56c13